improving template list of categories

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -26,36 +26,17 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+    <tr *ngFor="let cat of categories">
       <td>
-        <strong>Lazer</strong><br>
-        <small>Cinema, parque, praia, etc.</small>
+        <strong>{{cat.name}}</strong><br>
+        <small>{{cat.description}}</small>
       </td>
       <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-        <button (click)="alert('excluir')" class="btn btn-outline-danger btn-sm">Excluir</button>
+        <a [routerLink]="[cat.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
+        <button (click)="deleteCategory(cat)" class="btn btn-outline-danger btn-sm">Excluir</button>
       </td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Lazer</strong><br>
-        <small>Cinema, parque, praia, etc.</small>
-      </td>
-      <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-        <button (click)="alert('excluir')" class="btn btn-outline-danger btn-sm">Excluir</button>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Lazer</strong><br>
-        <small>Cinema, parque, praia, etc.</small>
-      </td>
-      <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-        <button (click)="alert('excluir')" class="btn btn-outline-danger btn-sm">Excluir</button>
-      </td>
-    </tr>
+    </tr>    
+    
   </tbody>
 
 </table>
