--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -6,38 +6,49 @@
     <li class="breadcrumb-item">
       <a routerLink="/categories">Categorias</a>
     </li>
-    <li class="breadcrumb-item active">
-      Cadastrar
-    </li>
+    <li class="breadcrumb-item active">{{pageTile}}</li>
   </ol>
 
   <div class="row mb-4">
     <div class="col-md">
-      <h1 class="h2 border-left pl-2"> Nova Categoria</h1>
+      <h1 class="h2 border-left pl-2">{{pageTile}}</h1>
     </div>
     <div class="col-md">
       <a routerLink="/categories" class="btn btn-light float-right">
-        << Voltar</a> </div> </div> <form>
-          <div class="card">
-            <div class="card-header">Informações sobre a categoria</div>
-            <div class="card-body">
-              <div class="form-row">
-                <div class="form-group col-md-4">
-                  <label for="name">Nome</label>
-                  <input type="text" class="form-control" id="name">
-                </div>
+        << Voltar</a>
+    </div>
+  </div>
 
-                <div class="form-group col-md-8">
-                  <label for="description" Descrição></label>
-                  <input type="text" class="form-control" id="description">
-
-
-                </div>
-
-              </div>
+  <form [formGroup]="categoryForm" (submit)="submitForm()">
+    <div class="card">
+      <div class="card-header">Informações sobre a categoria</div>
+      <div class="card-body">
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label for="name">Nome</label>
+            <input type="text" class="form-control" id="name" formControlName="name">
+            <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
+              <div *ngIf="categoryForm.get('name').errors.required">Campo obrigatório.</div>
+              <div *ngIf="categoryForm.get('name').errors.minlength">Campo com no mínimo 2 caracteres.</div>
             </div>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
+          <div class="form-group col-md-8">
+            <label for="description">Descrição</label>
+            <input type="text" class="form-control" id="description" formControlName="description">
+          </div>
+        </div>
+      </div>
+    </div>
 
-          </form>
+    <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
+      <strong>Erro no servidor:</strong>
+      <ul>
+        <li *ngIf="let error of serverErrorMessages">{{error}</li>
+      </ul>
+    </div>
+
+    <button [disabled]="submittingForm || categoryForm.invalid" type="submit"
+      class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
+
+  </form>
